# py-static-site-generator

./: .gitignore  LICENSE  Makefile  pyproject.toml  setup.cfg
ssg/: __main__.py  backlinks.py  graph.py  main_pipeline.py  markdown_pipeline.py  models.py  pipeline.py  plugin_loader.py  scripts_pipeline.py
ssg/plugins/: backlinks.py  compile_sass.py  copy.py  find_internal_links.py  frontmatter_parser.py  graph.py  inject_date.py  inject_date_iso8601.py  inject_layout.py  inject_title.py  md.py  md_to_html.py  parse_tags.py  permalink.py  render_html.py  set_target_path.py
tests/backlinks/: test_inject_internal_links.py
